# yolov8-learning

./: .gitignore  README.md  pyproject.toml
notebook/OpenCV/: 01basic_operation.md  02threshold_and_blur.md  03morphological_operations.md
notebook/Yolo/: 01basic_process.md  02yolo-parameters.md  03result.md
notebook/Yolo/attachment/02yolo-parameters/: default.yaml
src/OpenCV/03morphological_operations/: main.ipynb
src/Yolo/01demo/: main.py
src/Yolo/02yolo-parameters/: main.py
src/Yolo/03result/: main.py
